--- a/frontend/src/pages/LoginPage.css
+++ b/frontend/src/pages/LoginPage.css
@@ -1,56 +1,61 @@
-/* Login Page Styles */
-.login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    padding: 20px;
+/* Login Form Styles (LoginForm.css) */
+.login-form-container {
+    background-color: #34495e;
+    padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 100%;
     max-width: 400px;
-    margin: 50px auto;
-}
-
-.login-container h2 {
-    color: #333;
+    margin: 0 auto;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  h2 {
+    text-align: center;
+    font-size: 1.8rem;
+    color: white;
     margin-bottom: 20px;
-}
-
-.login-form div {
-    margin-bottom: 15px;
-}
-
-.login-form label {
-    display: block;
-    font-weight: bold;
-    color: #333;
-}
-
-.login-form input {
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .form-input {
     width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.login-form button {
+    padding: 12px;
+    font-size: 1rem;
+    background-color: #2c3e50;
+    border: 1px solid #34495e;
+    border-radius: 5px;
+    color: #fff;
+  }
+  
+  .form-input::placeholder {
+    color: #7f8c8d;
+  }
+  
+  .submit-button {
     width: 100%;
-    padding: 10px;
-    background-color: #3498db;
+    padding: 12px;
+    background-color: gray;
     color: white;
     border: none;
     border-radius: 5px;
+    font-size: 1.2rem;
     cursor: pointer;
-    transition: background 0.3s;
-}
-
-.login-form button:hover {
-    background-color: #2980b9;
-}
-
-.error-message {
-    color: red;
+    transition: background 0.3s ease;
+  }
+  
+  .submit-button:hover {
+    background-color: none;
+  }
+  
+  .register-link {
+    color: white;
+    text-align: center;
     margin-top: 10px;
-}
+    font-size: 15px;
+  }
+  
+  .register-link a {
+    color: white;
+  }
